--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,9 +37,12 @@ jobs:
           connect-token: ${{ secrets.OP_CONNECT_TOKEN }}
 
       - name: Load secret
-        uses: 1password/load-secrets-action@v1
-        env:
-          SECRET: op://app-cicd/hello-world/secret
+        run: |
+          curl -sSfo op.zip \
+            https://cache.agilebits.com/dist/1P/op2/pkg/v2.0.0/op_linux_amd64_v2.0.0.zip \
+            && unzip -od /usr/local/bin/ op.zip \
+            && rm op.zip
+          op run --help
 
 
   bcregistry-account-cd-by-dispatch:
@@ -63,4 +66,8 @@ jobs:
 
       - name: Load secret
         run: |
+          curl -sSfo op.zip \
+            https://cache.agilebits.com/dist/1P/op2/pkg/v2.0.0/op_linux_amd64_v2.0.0.zip \
+            && unzip -od /usr/local/bin/ op.zip \
+            && rm op.zip
           op run --help
