--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -42,7 +42,7 @@ jobs:
             https://cache.agilebits.com/dist/1P/op2/pkg/v2.0.0/op_linux_amd64_v2.0.0.zip \
             && unzip -od /usr/local/bin/ op.zip \
             && rm op.zip
-          op run --help
+          op read op://API/${{ github.event.inputs.environment }}/registries-search-api/REGISTRIES_SEARCH_API_KEY
 
 
   bcregistry-account-cd-by-dispatch:
