--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -67,4 +67,4 @@ jobs:
             https://cache.agilebits.com/dist/1P/op2/pkg/v2.0.0/op_linux_amd64_v2.0.0.zip \
             && unzip -od /usr/local/bin/ op.zip \
             && rm op.zip
-          op run --help
+          op account get
