--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -56,15 +56,12 @@ jobs:
           echo "TAG_NAME=${{ github.event.inputs.environment }}" >> $GITHUB_ENV
 
       - name: Configure 1Password Connect
-        uses: 1password/load-secrets-action/configure@v1
-        with:
-          connect-host: ${{ secrets.OP_CONNECT_URL }}
-          connect-token: ${{ secrets.OP_CONNECT_TOKEN }}
-
-      - name: Load secret
+        env:
+          OP_CONNECT_HOST: ${{ secrets.OP_CONNECT_URL }}
+          OP_CONNECT_TOKEN : ${{ secrets.OP_CONNECT_TOKEN }}
         run: |
           curl -sSfo op.zip \
             https://cache.agilebits.com/dist/1P/op2/pkg/v2.0.0/op_linux_amd64_v2.0.0.zip \
             && unzip -od /usr/local/bin/ op.zip \
             && rm op.zip
-          op account get
+          op read op://API/${{ env.TAG_NAME }}/registries-search-api/REGISTRIES_SEARCH_API_KEY
