--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,15 +30,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: pull 1password image
+        uses: docker://1password/op:2
+
       - name: Configure 1Password Connect
         env:
           OP_CONNECT_HOST: ${{ secrets.OP_CONNECT_URL }}
           OP_CONNECT_TOKEN : ${{ secrets.OP_CONNECT_TOKEN }}
         run: |
-          curl -sSfo op.zip \
-            https://cache.agilebits.com/dist/1P/op2/pkg/v2.0.0/op_linux_amd64_v2.0.0.zip \
-            && unzip -od /usr/local/bin/ op.zip \
-            && rm op.zip
           op read op://API/${{ env.TAG_NAME }}/registries-search-api/REGISTRIES_SEARCH_API_KEY
 
 
@@ -55,13 +54,12 @@ jobs:
         run: |
           echo "TAG_NAME=${{ github.event.inputs.environment }}" >> $GITHUB_ENV
 
+      - name: pull 1password image
+        uses: docker://1password/op:2
+
       - name: Configure 1Password Connect
         env:
           OP_CONNECT_HOST: ${{ secrets.OP_CONNECT_URL }}
           OP_CONNECT_TOKEN : ${{ secrets.OP_CONNECT_TOKEN }}
         run: |
-          curl -sSfo op.zip \
-            https://cache.agilebits.com/dist/1P/op2/pkg/v2.0.0/op_linux_amd64_v2.0.0.zip \
-            && unzip -od /usr/local/bin/ op.zip \
-            && rm op.zip
           op read op://API/${{ env.TAG_NAME }}/registries-search-api/REGISTRIES_SEARCH_API_KEY
