--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,14 +31,18 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: pull 1password image
-        uses: docker://1password/op:2
+        uses: docker://
 
       - name: Configure 1Password Connect
         env:
           OP_CONNECT_HOST: ${{ secrets.OP_CONNECT_URL }}
           OP_CONNECT_TOKEN : ${{ secrets.OP_CONNECT_TOKEN }}
-        run: |
-          op read op://API/${{ env.TAG_NAME }}/registries-search-api/REGISTRIES_SEARCH_API_KEY
+        uses: addnab/docker-run-action@v3
+        with:
+            image: 1password/op:2
+            run: |
+              pwd
+              op read op://API/${{ env.TAG_NAME }}/registries-search-api/REGISTRIES_SEARCH_API_KEY
 
 
   bcregistry-account-cd-by-dispatch:
