--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,10 +35,12 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
             image: 1password/op:2
+            options: -v ${{ github.workspace }}:/var/www
             run: |
               export OP_CONNECT_HOST=${{ secrets.OP_CONNECT_URL }}
               export OP_CONNECT_TOKEN=${{ secrets.OP_CONNECT_TOKEN }}
               pwd
+              ls -l
               op read op://API/${{ env.TAG_NAME }}/registries-search-api/REGISTRIES_SEARCH_API_KEY
 
 
