--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,11 +35,8 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
             image: 1password/op:2
-            options: -v ${{ github.workspace }}:/var/www
+            options: -rm -v ${{ github.workspace }}:/var/www -e OP_CONNECT_HOST=${{ secrets.OP_CONNECT_URL }} -e OP_CONNECT_TOKEN=${{ secrets.OP_CONNECT_TOKEN }} -e APP_ENV=${{ env.TAG_NAME }}
             run: |
-              export OP_CONNECT_HOST=${{ secrets.OP_CONNECT_URL }}
-              export OP_CONNECT_TOKEN=${{ secrets.OP_CONNECT_TOKEN }}
-              export APP_ENV=${{ env.TAG_NAME }}
               cd /var/www
               touch aaa.txt
               ls -l
