--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,7 +35,11 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
             image: 1password/op:2
-            options: --rm -v ${{ github.workspace }}:/var/www -e OP_CONNECT_HOST=${{ secrets.OP_CONNECT_URL }} -e OP_CONNECT_TOKEN=${{ secrets.OP_CONNECT_TOKEN }} -e APP_ENV=${{ env.TAG_NAME }}
+            options: -v ${{ github.workspace }}:/var/www \
+                     --user $(id -u):$(id -g)
+                     -e OP_CONNECT_HOST=${{ secrets.OP_CONNECT_URL }} \
+                     -e OP_CONNECT_TOKEN=${{ secrets.OP_CONNECT_TOKEN }} \
+                     -e APP_ENV=${{ env.TAG_NAME }}
             run: |
               cd /var/www
               touch aaa.txt
