--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,12 +36,7 @@ jobs:
           OP_CONNECT_TOKEN: ${{ secrets.OP_CONNECT_TOKEN }}
           APP_ENV: ${{ env.TAG_NAME }}
         run: |
-          curl -sSfo op.zip \
-            https://cache.agilebits.com/dist/1P/op2/pkg/v2.0.0/op_linux_amd64_v2.0.0.zip \
-            && unzip -od /usr/local/bin/ op.zip \
-            && rm op.zip
-          op inject -i ./devops/vaults.env -o .env
-          cat .env
+          make get-env
 
   bcregistry-account-cd-by-dispatch:
     runs-on: ubuntu-20.04
@@ -56,12 +51,10 @@ jobs:
         run: |
           echo "TAG_NAME=${{ github.event.inputs.environment }}" >> $GITHUB_ENV
 
-      - name: pull 1password image
-        uses: docker://1password/op:2
-
-      - name: Configure 1Password Connect
+      - name: Get environment variables
         env:
           OP_CONNECT_HOST: ${{ secrets.OP_CONNECT_URL }}
-          OP_CONNECT_TOKEN : ${{ secrets.OP_CONNECT_TOKEN }}
+          OP_CONNECT_TOKEN: ${{ secrets.OP_CONNECT_TOKEN }}
+          APP_ENV: ${{ env.TAG_NAME }}
         run: |
-          op read op://API/${{ env.TAG_NAME }}/registries-search-api/REGISTRIES_SEARCH_API_KEY
+          make get-env
